--- a/src/main/properties/config.cfg
+++ b/src/main/properties/config.cfg
@@ -9,8 +9,14 @@ APIKEY = 77502fe344500f10cfd45a93685fe239cb72cf97
 
 [DB]
 
-host=localhost 
-dbname=postgres 
-user=postgres 
-password=amogh
-port=5433
+host=
+dbname= 
+user=
+password=
+port=
+
+[ARN]
+
+ARN = 
+Access_key_ID = 
+Secret_access_key = 
